--- a/web/dev/sass/views/_mobile.sass
+++ b/web/dev/sass/views/_mobile.sass
@@ -79,11 +79,12 @@
           font-size: 8.5vw
         p
           padding: 0
-      .radio-buttons
-        #radio-button1
-          text-align: center
-        #radio-button2
-          text-align: center
+          margin: 0 -20px
+      #radio-button-block
+        #form_baptismChoice
+          label
+            margin: 10px 30px
+            float: left
 
     //footer
     .footer
